--- a/aboutUs.html
+++ b/aboutUs.html
@@ -49,9 +49,11 @@
                 <div data-menu-index="3" class="menu-link">
                   Impact
                 </div>
-                <div data-menu-index="4" class="menu-link">
-                  News
-                </div>
+                <a href="/news.html">
+                  <div data-menu-index="4" class="menu-link">
+                    News
+                  </div>
+                </a>
                 <a href="/application.html">
                   <div data-menu-index="5" class="menu-link">
                     Apply
@@ -68,6 +70,9 @@
   
       <div id="menu-wrapper" class="modal">
         <div class="mobile-menu-container">
+          <div id="mobile-menu-close">
+            <img src="/assets/menu.svg" alt="Mobile Menu Close.">
+          </div>
           <div class="mobile-menu-links-wrapper">
             <div class="mobile-menu-links">
               <div data-mobile-menu-index="0" class="mobile-menu-link">
@@ -82,9 +87,11 @@
               <div data-mobile-menu-index="3" class="mobile-menu-link">
                 Impact
               </div>
-              <div data-mobile-menu-index="4" class="mobile-menu-link">
-                News
-              </div>
+              <a href="/news.html">
+                <div data-mobile-menu-index="4" class="mobile-menu-link">
+                  News
+                </div>
+              </a>
               <div data-mobile-menu-index="5" class="mobile-menu-link">
                 <a href="/application.html">Apply</a>
               </div>
@@ -209,7 +216,7 @@
                 Project Timeline
               </div>
               <div class="details-paragraph">
-                <img src="/assets/timeline.svg" alt="EducationUSA Appliation Timeline.">
+                <img class="project-timeline" src="/assets/timeline.svg" alt="EducationUSA Appliation Timeline.">
               </div>
             </div>
           </div>
