--- a/application/undergraduate.html
+++ b/application/undergraduate.html
@@ -47,9 +47,11 @@
                 <div data-menu-index="3" class="menu-link">
                   Impact
                 </div>
-                <div data-menu-index="4" class="menu-link">
-                  News
-                </div>
+                <a href="/news.html">
+                  <div data-menu-index="4" class="menu-link">
+                    News
+                  </div>
+                </a>
                 <a href="/application.html">
                   <div data-menu-index="5" class="menu-link selected">
                     Apply
@@ -66,6 +68,9 @@
   
       <div id="menu-wrapper" class="modal">
         <div class="mobile-menu-container">
+          <div id="mobile-menu-close">
+            <img src="/assets/menu.svg" alt="Mobile Menu Close.">
+          </div>
           <div class="mobile-menu-links-wrapper">
             <div class="mobile-menu-links">
               <div data-mobile-menu-index="0" class="mobile-menu-link">
@@ -80,9 +85,11 @@
               <div data-mobile-menu-index="3" class="mobile-menu-link">
                 Impact
               </div>
-              <div data-mobile-menu-index="4" class="mobile-menu-link">
-                News
-              </div>
+              <a href="/news.html">
+                <div data-mobile-menu-index="4" class="mobile-menu-link">
+                  News
+                </div>
+              </a>
               <div data-mobile-menu-index="5" class="mobile-menu-link">
                 <a href="/application.html">Apply</a>
               </div>
