--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 
     <div id="menu-wrapper" class="modal">
       <div class="mobile-menu-container">
+        <div id="mobile-menu-close">
+          <img src="/assets/menu.svg" alt="Mobile Menu Close.">
+        </div>
         <div class="mobile-menu-links-wrapper">
           <div class="mobile-menu-links">
             <div data-mobile-menu-index="0" class="mobile-menu-link">
@@ -73,18 +76,20 @@
               <a href="/aboutUs.html">About Us</a>
             </div>
             <a href="/beneficiaries.html">
-                <div data-mobile-menu-index="2" class="mobile-menu-link">Scholars</div>
-              </a>
+              <div data-mobile-menu-index="2" class="mobile-menu-link">Scholars</div>
+            </a>
             <div data-mobile-menu-index="3" class="mobile-menu-link">
               Impact
             </div>
-            <div data-mobile-menu-index="4" class="mobile-menu-link">
-              News
-            </div>
+            <a href="/news.html">
+              <div data-mobile-menu-index="4" class="mobile-menu-link">
+                News
+              </div>
+            </a>
             <div data-mobile-menu-index="5" class="mobile-menu-link">
               <a href="/application.html">Apply</a>
             </div>
-            <div data-mobile-menu-index="6" class="mobile-menu-link"><a href="">Login</a></div>
+            <div id="mobile-login-nav-btn" data-mobile-menu-index="6" class="mobile-menu-link">Login</div>
           </div>
         </div>
       </div>
