--- a/beneficiaries.html
+++ b/beneficiaries.html
@@ -280,7 +280,7 @@
         </section>
       </div>
 
-      <div id="beneficiary-details-modal" class="modal visible">
+      <div id="beneficiary-details-modal" class="modal">
         <!-- <div class="mask"> -->
           <div data-modal-close="beneficiaries-details-modal" class="modal-close">close (x)</div>
           <section class="section-container split-row">
