--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
                 </div>
               </a>
               <a href="/beneficiaries.html">
-                  <div data-menu-index="2" class="menu-link">Scholars</div>
-                </a>
+                <div data-menu-index="2" class="menu-link">Scholars</div>
+              </a>
               <div data-menu-index="3" class="menu-link">
                 Impact
               </div>
-              <div data-menu-index="4" class="menu-link">
-                News
-              </div>
+              <a href="/news.html">
+                <div data-menu-index="4" class="menu-link">
+                  News
+                </div>
+              </a>
               <a href="/application.html">
                 <div data-menu-index="5" class="menu-link">
                   Apply
@@ -435,30 +437,6 @@
             </div>
           </div>
           <div id="updates-slider" class="updates-container">
-            <div class="update-details">
-              <div class="update-image"></div>
-              <div class="update-text">
-                <div class="update-title">Empowering bright Nigerians</div>
-                <div class="update-subtext">
-                  At EducationUSA, our vision is to help financially lacking gifted students ….
-                </div>
-                <div class="read-more div btn plain">
-                  read more
-                </div>
-              </div>
-            </div>
-            <div class="update-details">
-              <div class="update-image"></div>
-              <div class="update-text">
-                <div class="update-title">Empowering bright Nigerians</div>
-                <div class="update-subtext">
-                  At EducationUSA, our vision is to help financially lacking gifted students ….
-                </div>
-                <div class="read-more div btn plain">
-                  read more
-                </div>
-              </div>
-            </div>
             <div class="update-details">
               <div class="update-image"></div>
               <div class="update-text">
